Hide the new post footer on mobile, make sure the minimum height of the new post view is right.

--- a/scss/partials/_entry_edit.scss
+++ b/scss/partials/_entry_edit.scss
@@ -329,7 +329,7 @@ div.entry-edit-modal-container {
         border-bottom: 1px solid rgba($deep_tan, 0.3);
 
         @include mobile() {
-          min-height: 100vh;
+          min-height: calc(100vh - 139px);
           max-height: initial;
           padding: 0px;
           width: 100%;
@@ -448,7 +448,7 @@ div.entry-edit-modal-container {
         position: relative;
 
         @include mobile() {
-          margin: 16px;
+          display: none;
         }
 
         div.emoji-picker {
